--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "repository": "https://github.com/nemanjan00/tinsta",
   "author": "Nemanja Nedeljkovic <nemanjan00@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "blessed": "^0.1.81"
+  }
 }
